[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
anyhow = { workspace = true }
tracing = { workspace = true }
