[package]
name = "tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.3.0"
